# lexgrip-monorepo

./: .bazelrc  .gitignore  MODULE.bazel  README.md  maven.MODULE.bazel
build_flags/: BUILD.bazel  flags.bzl
gradle/: libs.versions.toml
k8s/: BUILD.bazel
libs/common-api/: BUILD.bazel
libs/common-api/src/main/java/com/lexgrip/common/api/config/: GsonProvider.java  JacksonProvider.java  LocaleConfig.java  SchedulerConfig.java  ValidationHandler.java
libs/common-api/src/main/java/com/lexgrip/common/api/entity/: AutoGeneratedUUIDIdBaseEntity.java  BaseEntity.java
libs/common-api/src/main/java/com/lexgrip/common/api/model/: ApiError.java  ApiResponse.java  CheckedFunction.java  Result.java
libs/common-api/src/main/java/com/lexgrip/common/api/validation/advice/: GlobalExceptionHandler.java
libs/common-api/src/main/java/com/lexgrip/common/api/validation/annotation/: UUID.java  ValidPhoneNumber.java
libs/common-api/src/main/java/com/lexgrip/common/api/validation/resolver/: ResolvedFromPathVariable.java
libs/common-api/src/main/java/com/lexgrip/common/api/validation/typeadapter/: InstantTypeAdapter.java
libs/common-api/src/main/java/com/lexgrip/common/api/validation/validator/: PhoneNumberValidator.java
libs/common-service/: BUILD.bazel
libs/common-service/src/main/java/com/lexgrip/common/service/config/: CommonServiceLibraryConfig.java
libs/common-webservice/: BUILD.bazel
libs/common-webservice/src/main/java/com/lexgrip/common/webservice/config/: CachingConfig.java  CommonWebConfig.java  CommonWebServiceLibraryConfig.java
libs/common-webservice/src/main/java/com/lexgrip/common/webservice/jwt/: User.java  UserClaims.java  UserClaimsExtractorService.java  UserContextService.java  UserCreatorService.java
libs/common-webservice/src/main/java/com/lexgrip/common/webservice/resolver/: CurrentUser.java  UserArgumentResolver.java
libs/common-webservice/src/main/java/com/lexgrip/common/webservice/security/: SecurityConfig.java
scripts/: dev.ghcr.env.example  dev.sh  push_dev.sh  (+2 more)
services/app-platform/: BUILD.bazel
services/app-platform/k8s/base/: app-platform.env  db.env  deployment.yaml  env-patch.yaml  ingressroute.yaml  kustomization.yaml  service.yaml
services/app-platform/k8s/base/postgres/: deployment.yaml  kustomization.yaml  service.yaml
services/app-platform/k8s/overlays/dev/: app-platform.env  kustomization.yaml  secret.yaml
services/app-platform/k8s/overlays/prod/: app-platform.env  kustomization.yaml
services/app-platform/k8s/overlays/staging/: app-platform.env  kustomization.yaml
services/app-platform/scripts/: start.sh
services/app-platform/src/main/java/com/lexgrip/app/platform/service/: LexgripAppPlatformApplication.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/ai/: AiServiceConfig.java  FlashcardAiService.java  GeneratedCardResponse.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/application/Cards/: CardsController.java  CardsService.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/application/account/: AccountController.java  AccountPageDTO.java  AccountService.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/application/cards/: CardsController.java  CardsService.java  GenerateRequest.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/application/categories/: CategoriesController.java  CategoriesService.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/application/common/: ApiExceptionHandler.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/application/languages/: CreateLanguageRequest.java  LanguageController.java  LanguageService.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/cards/: CardEntity.java  CardRepository.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/config/: AiConfig.java  WebResolverConfig.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/cron/: ResetUserLimits.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/daemon/: UserLimitResetor.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/decks/: DeckEntity.java  DeckRepository.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/feedback/: FeedBackRepository.java  FeedbackEntity.java  FeedbackType.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/model/cards/: CardDTO.java  CardEntity.java  CardMapper.java  CardRepository.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/model/categories/: CategoriesDTO.java  CategoryEntity.java  CategoryMapper.java  CategoryRepository.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/model/common/: Colors.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/model/decks/: DeckEntity.java  DeckRepository.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/model/dto/: PagedResponse.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/model/exceptions/: BadRequestException.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/resolver/: CurrentUserEntity.java  CurrentUserEntityArgumentResolver.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/usage/: UserDailyUsageEntity.java  UserDailyUsageRepository.java
services/app-platform/src/main/java/com/lexgrip/app/platform/service/user/: UserEntity.java  UserRepository.java
services/app-platform/src/main/resources/db/changelog/: 01-create-schema.xml
services/app-platform/src/main/resources/tcf/: .metadata  CONSTRAINTS.md  SOUL.md  TASK.md  example-payload.xml  payload-template.xml
services/gateway/: BUILD.bazel
services/gateway/k8s/base/: values.yaml
services/gateway/k8s/overlays/dev/: values.yaml
services/gateway/k8s/overlays/staging/: values.yaml
services/keycloak/k8s/theme-image/: BUILD.bazel  Dockerfile  build_image.sh  push_image.sh
(+51 files in other folders)
