load("@rules_java//java:java_library.bzl", "java_library")
load("//build_defs/spring/dependencies:dependency_groups.bzl", "MICROSERVICE_API_DEPS")

java_library(
    name = "common-service",
    srcs = glob(["src/main/java/com/lexgrip/common/service/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = MICROSERVICE_API_DEPS,
)
