load("@rules_java//java:java_library.bzl", "java_library")
load("//build_defs/spring/dependencies:dependency_groups.bzl", "MICROSERVICE_WEB_DEPS")

java_library(
    name = "common-webservice",
    srcs = glob(["src/main/java/com/lexgrip/common/webservice/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = MICROSERVICE_WEB_DEPS,
)
